cmake_minimum_required(VERSION 3.28)
project(proyectofinalp3)

set(CMAKE_CXX_STANDARD 17)

add_executable(proyectofinalp3 main.cpp
        Paquete.cpp
        Paquete.h
        ListaEnlazada.cpp
        ListaEnlazada.h
        Cola.cpp
        Cola.h
        Pila.cpp
        Pila.h
        Cliente.cpp
        Cliente.h
        ArbolBinario.cpp
        ArbolBinario.h
        Ordenamiento.cpp
        Ordenamiento.h
        TablaHash.cpp
        TablaHash.h
        Grafo.cpp
        Grafo.h
        Dijkstra.cpp
        Dijkstra.h)
